- feat service e metodos para criar times

--- a/src/app/components/campeonato/campeonato.component.html
+++ b/src/app/components/campeonato/campeonato.component.html
@@ -2,6 +2,10 @@
   <mat-tab label="Times">
     <app-list-times></app-list-times>
   </mat-tab>
-  <mat-tab label="Classificação">Classificação</mat-tab>
-  <mat-tab label="Cadastro de times">Cadastro de times</mat-tab>
+  <mat-tab label="Classificação">
+    Classificação
+  </mat-tab>
+  <mat-tab label="Cadastro de times">
+    <app-create-times></app-create-times>
+  </mat-tab>
 </mat-tab-group>
